# components

./: .env.default  .gitignore  dockerfile  start_project.py
api/: pyproject.toml
api/src/api/: main.py
api/src/api/storage/: crud.py  schemas.py  views.py
api/src/db/: components.db  db_init.py  operations.py
frontend/components_diplom/: package-lock.json  package.json
frontend/components_diplom/public/: index.html
frontend/components_diplom/src/: App.js  index.js
frontend/components_diplom/src/components/: asidePanel.jsx  dataViewHeaders.jsx  dataViewWindow.jsx  hitler.jsx  post.jsx  viewHead.jsx  viewHeader.jsx
frontend/components_diplom/src/components/UI/button/: mybutton.jsx  mybutton.module.css
frontend/components_diplom/src/components/UI/input/: myInput.jsx  myInput.module.css
frontend/components_diplom/src/components/UI/modal/: modal.jsx
frontend/components_diplom/src/components/UI/select/: mySelect.jsx  mySelect.module.css
frontend/components_diplom/src/styles/: app.css  app.less  aside.less  dataView.less  modal.less  vars.less  viewHead.less  viewHeaders.less
